added more task to module3

--- a/03_Module/index.html
+++ b/03_Module/index.html
@@ -8,7 +8,20 @@
 </head>
 
 <body>
+  <!-- This img is for 07_jsCommonEvents.js -->
+  <div> <img id="myImage" src="img/pic_bulboff.gif" width="200" height="250"></div>
 
+  <!-- This h1 and <p> tag for 08_htmlDomDocument -->
+
+  <p id="message">This Paragraph belongs to 08_htmlDocument</p>
+  <button id="Button">Click Me</button>
+
+
+  <!-- <script src="04_windowObject.js"></script> -->
+  <!-- <script src="05_navigatorObject.js"></script> -->
+  <!-- <script src="06_geoLocation.js"></script> -->
+  <!-- <script src="07_jsCommonEvents.js"></script> -->
+  <!-- <script src="08_htmlDomDocument.js"></script> -->
 </body>
 
 </html>
