--- a/03_Module/09_jsDomWorking/index.html
+++ b/03_Module/09_jsDomWorking/index.html
@@ -2,94 +2,40 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-    }
+  <link rel="stylesheet" href="milligram.css">
+  <link rel="stylesheet" href="style.css">
 
-    h1 {
-      text-align: center;
-    }
-
-    form {
-      width: 400px;
-      margin: 0 auto;
-    }
-
-    div {
-      margin-bottom: 10px;
-    }
-
-    label {
-      display: inline-block;
-      width: 120px;
-      font-weight: bold;
-    }
-
-    input[type="text"],
-    input[type="email"],
-    input[type="password"] {
-      width: 200px;
-      padding: 5px;
-      border: 1px solid #ccc;
-    }
-
-    .error {
-      color: red;
-      font-size: 12px;
-      display: inline-block;
-      margin-left: 5px;
-    }
-
-    button[type="submit"] {
-      padding: 8px 15px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-
-    button[type="submit"]:hover {
-      background-color: #45a049;
-    }
-  </style>
 </head>
 
 <body>
-  <h1>Form Validation</h1>
-
-  <form id="myForm">
-    <div>
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name">
-      <span id="nameError" class="error"></span>
-    </div>
-
-    <div>
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email">
-      <span id="emailError" class="error"></span>
-    </div>
-
-    <div>
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password">
-      <span id="passwordError" class="error"></span>
-    </div>
-
-    <div>
-      <label for="confirmPassword">Confirm Password:</label>
-      <input type="password" id="confirmPassword" name="confirmPassword">
-      <span id="confirmPasswordError" class="error"></span>
-    </div>
-
-    <button type="submit">Submit</button>
-  </form>
-
+  <div class="container">
+    <h1>Registration Form</h1>
+    <form id="myForm">
+      <div>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name">
+        <span id="nameError" class="error"></span>
+      </div>
+      <div>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email">
+        <span id="emailError" class="error"></span>
+      </div>
+      <div>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password">
+        <span id="passwordError" class="error"></span>
+      </div>
+      <div>
+        <label for="confirmPassword">Confirm Password:</label>
+        <input type="password" id="confirmPassword" name="confirmPassword">
+        <span id="confirmPasswordError" class="error"></span>
+      </div>
+      <div>
+        <button type="submit" id="submit" class="button-primary">Submit</button>
+      </div>
+    </form>
+  </div>
 
   <script src="script.js"></script>
 </body>
